fixed mobile redering and alignment issues

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,5 +4,4 @@
 
 :root {
   background-color: black;
-  color: white;
 }
